# telescope_control

./: .gitignore  Makefile  README.md  main.cpp  si5351.cpp  si5351.h  tmc2130.cpp  tmc2130.h  tmc429.cpp  tmc429.h
arduino/telescope_module_testing/: telescope_module_testing.ino
docs/: nodes.drawio  notes.md
launch/: telescope_control.launch.py
python/: astropy_test.py  generate_signal.py  my_notebook.ipynb  sky_field_request.py  stellarium_request.py  tmc429_test.py
python/telescope_skyfield_database/: package.xml  setup.cfg  setup.py
rpi_gpio_control/: CMakeLists.txt  package.xml
rpi_gpio_control/include/rpi_gpio_control/: GpioController.h
rpi_gpio_control/src/: GpioController.cpp  gpio_node.cpp
spi_temp/: main  main.cpp
src/telescope/: CMakeLists.txt  package.xml
src/telescope/src/: telescope_node.cpp
src/telescope_drive/: CMakeLists.txt  package.xml
src/telescope_drive/include/telescope_drive/: tmc2130.h  tmc429.h
src/telescope_drive/src/: drive_node.cpp  tmc2130.cpp  tmc429.cpp
src/telescope_interfaces/: CMakeLists.txt  package.xml
src/telescope_interfaces/msg/: CustomMessage.msg  TargetAltAz.msg  TargetCoordinates.msg  TargetPosition.msg
src/telescope_interfaces/srv/: ChangeFrequency.srv  QueryObject.srv  RequestTargetData.srv  SetDriveSpeed.srv  SetLedMode.srv  SetObserver.srv  SetTarget.srv
src/telescope_si5351/: CMakeLists.txt  package.xml
src/telescope_si5351/include/telescope_si5351/: si5351.h
src/telescope_si5351/src/: si5351.cpp  si5351_node.cpp
src/telescope_status_led/: CMakeLists.txt  package.xml
src/telescope_status_led/src/: status_led_node.cpp
src/telescope_target_data/: package.xml  setup.cfg  setup.py
src/telescope_target_data/telescope_target_data/: target_data_node.py
src/telescope_tmc429/: CMakeLists.txt  package.xml
src/telescope_tmc429/include/telescope_tmc429/: tmc429.h
src/telescope_tmc429/src/: tmc429.cpp  tmc429_node.cpp
target_body/: CMakeLists.txt  package.xml
target_body/src/: target_body.cpp
telescope_control/: CMakeLists.txt  package.xml
telescope_control/src/: object_information_node.cpp  target_acquisition_node.cpp
telescope_http_server/: package.xml  setup.cfg  setup.py
telescope_http_server/telescope_http_server/: http_server_node.py
telescope_interfaces/: CMakeLists.txt  package.xml
telescope_interfaces/msg/: TargetPosition.msg
telescope_interfaces/srv/: ChangeFrequency.srv  QueryObject.srv  RequestTargetData.srv  SetObserver.srv  SetTarget.srv
telescope_target_body/: CMakeLists.txt  package.xml
telescope_target_body/src/: target_body_node.cpp
telescope_target_data/: setup.py
telescope_target_data/telescope_target_data/: target_data_node.py
time_publisher/: CMakeLists.txt  package.xml
time_publisher/src/: time_publisher.cpp
